// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders component with default state 1`] = `
<form>
  <div
    className="sc-bdVaJa ktgugz"
  >
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat BFdPN"
        htmlFor="firstName"
      >
        First name
      </label>
      <div
        className="sc-bxivhb bxWlrO"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="firstName"
          placeholder="Enter first name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat BFdPN"
        htmlFor="surname"
      >
        Surname
      </label>
      <div
        className="sc-bxivhb bxWlrO"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="surname"
          placeholder="Enter surname"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="email"
    >
      Email address
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="email"
        placeholder="Enter your email address"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="phoneNumber"
    >
      Phone number
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="phoneNumber"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="voucherCode"
    >
      Voucher code
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="voucherCode"
        placeholder="Enter your voucher code"
        type="number"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <input
      checked={false}
      className="sc-gzVnrw fGxjqS"
      id="acceptPrivacy"
      type="checkbox"
    />
    <span
      className="sc-htoDjs kdQguC"
    />
    <label
      className="sc-bZQynM dBpAAU"
      htmlFor="acceptPrivacy"
    >
      Accept Privacy Settlement
    </label>
  </div>
  <button
    className="sc-dnqmqq dqwUDQ"
    disabled={false}
    type="submit"
  >
    <span
      className="sc-iwsKbI jeHUaD"
    >
      Get Offer
    </span>
    <svg
      className="sc-gZMcBi fspjKn"
    >
      arrow-right.svg
    </svg>
  </button>
</form>
`;

exports[`Form renders component with disabled submit button 1`] = `
<form>
  <div
    className="sc-bdVaJa ktgugz"
  >
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat BFdPN"
        htmlFor="firstName"
      >
        First name
      </label>
      <div
        className="sc-bxivhb bxWlrO"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="firstName"
          placeholder="Enter first name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat BFdPN"
        htmlFor="surname"
      >
        Surname
      </label>
      <div
        className="sc-bxivhb bxWlrO"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="surname"
          placeholder="Enter surname"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="email"
    >
      Email address
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="email"
        placeholder="Enter your email address"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="phoneNumber"
    >
      Phone number
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="phoneNumber"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat BFdPN"
      htmlFor="voucherCode"
    >
      Voucher code
    </label>
    <div
      className="sc-bxivhb bxWlrO"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="voucherCode"
        placeholder="Enter your voucher code"
        type="number"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <input
      checked={false}
      className="sc-gzVnrw fGxjqS"
      id="acceptPrivacy"
      type="checkbox"
    />
    <span
      className="sc-htoDjs kdQguC"
    />
    <label
      className="sc-bZQynM dBpAAU"
      htmlFor="acceptPrivacy"
    >
      Accept Privacy Settlement
    </label>
  </div>
  <button
    className="sc-dnqmqq dqwUDQ"
    disabled={true}
    type="submit"
  >
    <span
      className="sc-iwsKbI jeHUaD"
    >
      Get Offer
    </span>
    <svg
      className="sc-gZMcBi fspjKn"
    >
      arrow-right.svg
    </svg>
  </button>
</form>
`;

exports[`Form renders component with error message 1`] = `
<form>
  <div
    className="sc-bdVaJa ktgugz"
  >
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat gPdFIw"
        htmlFor="firstName"
      >
        First name
      </label>
      <div
        className="sc-bxivhb iYySRi"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="firstName"
          placeholder="Enter first name"
          type="text"
          value=""
        />
      </div>
      <span
        className="sc-EHOje cgozCC"
      >
        Invalid first name
      </span>
    </div>
    <div
      className="sc-bwzfXH kOhaJW"
    >
      <label
        className="sc-htpNat gPdFIw"
        htmlFor="surname"
      >
        Surname
      </label>
      <div
        className="sc-bxivhb iYySRi"
      >
        <input
          className="sc-ifAKCX hZfyrg"
          id="surname"
          placeholder="Enter surname"
          type="text"
          value=""
        />
      </div>
      <span
        className="sc-EHOje cgozCC"
      >
        Invalid surname
      </span>
    </div>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat gPdFIw"
      htmlFor="email"
    >
      Email address
    </label>
    <div
      className="sc-bxivhb iYySRi"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="email"
        placeholder="Enter your email address"
        type="email"
        value=""
      />
    </div>
    <span
      className="sc-EHOje cgozCC"
    >
      Invalid email address
    </span>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat gPdFIw"
      htmlFor="phoneNumber"
    >
      Phone number
    </label>
    <div
      className="sc-bxivhb iYySRi"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="phoneNumber"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <span
      className="sc-EHOje cgozCC"
    >
      Invalid phone number
    </span>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <label
      className="sc-htpNat gPdFIw"
      htmlFor="voucherCode"
    >
      Voucher code
    </label>
    <div
      className="sc-bxivhb iYySRi"
    >
      <input
        className="sc-ifAKCX hZfyrg"
        id="voucherCode"
        placeholder="Enter your voucher code"
        type="number"
        value=""
      />
    </div>
    <span
      className="sc-EHOje cgozCC"
    >
      Invalid voucher code
    </span>
  </div>
  <div
    className="sc-bwzfXH kOhaJW"
  >
    <input
      checked={false}
      className="sc-gzVnrw fGxjqS"
      id="acceptPrivacy"
      type="checkbox"
    />
    <span
      className="sc-htoDjs gUiEwb"
    />
    <label
      className="sc-bZQynM bchkUQ"
      htmlFor="acceptPrivacy"
    >
      Accept Privacy Settlement
    </label>
  </div>
  <button
    className="sc-dnqmqq dqwUDQ"
    disabled={true}
    type="submit"
  >
    <span
      className="sc-iwsKbI jeHUaD"
    >
      Get Offer
    </span>
    <svg
      className="sc-gZMcBi fspjKn"
    >
      arrow-right.svg
    </svg>
  </button>
</form>
`;
